# mcp-obs

./: .env.example  .gitignore  CLAUDE.md  README.md  package.json  sst-env.d.ts  sst.config.ts  tsconfig.json
.claude/agents/: debugger.md
.claude/commands/: create_feature.md  create_implementation_strategy.md  validate_plan.md  write_tests.md
.cursor/: mcp-example.json  mcp.json
demo-mcp/: .gitignore  README.md  package.json  test-both-transports.sh  tsconfig.json
demo-mcp/client/: tsconfig.json
demo-mcp/python/: .gitignore  IMPLEMENTATION_NOTES.md  README.md  pyproject.toml  server_fastmcp.py  server_minimal.py  sst.pyi
demo-mcp/python/src/: server.py
demo-mcp/typescript/: package.json
docs/: 0.prd.md  DATABASE_GUIDE.md  README.md  auth-architecture-guide.md  mcp-auth-tables.md  mcp-oauth-client-integration.md  mcp-obs-architecture.md  mcplatform-dual-schema-pattern.md  mcplatform-oauth-server-integration.md  mcplatform-vhost-pattern.md  oauth-fix-implementation.md  oauth-server-integration-fix.md  orpc-server-actions-guide.md  troubleshooting-log.md  user-tracking-analytics-architecture.md
docs/mcp-obs/: README.md  customer-value-proposition.md  mcp-client-server-interaction.md  mcp-oauth-implementation-guide.md  mcp-user-capture-system.md  oauth-flow-complete.md  oauth-implementation-guide.md  sdk-design-architecture.md
docs/mcplatform-guide/: README.md  dual-auth-system-guide.md  mcp-auth-guide.md  oauth-server-integration-guide.md  orpc-implementation-guide.md  platform-architecture.md  vhost-pattern-guide.md
scripts/: ngrok.ts
(+26 files in other folders)
