[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-demo-python"
version = "0.1.0"
description = "MCP demo server with OAuth authentication"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=2.12.0",
    "uvicorn>=0.24.0",
    "httpx>=0.25.0",
    # Local mcp-obs SDK dependency
    "mcp-obs-server",
    "fastapi>=0.117.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[tool.uv.sources]
mcp-obs-server = { path = "../../packages/sdk/python/mcp-server", editable = true }

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.hatch.envs.default]
dependencies = [
    "pytest",
    "pytest-asyncio",
]

[tool.hatch.envs.default.scripts]
dev = "uvicorn src.server:app --host 0.0.0.0 --port 3005 --reload"
start = "uvicorn src.server:app --host 0.0.0.0 --port 3005"
test = "pytest"
